--- a/src/main/resources/ensisa/connectfour/main-view.fxml
+++ b/src/main/resources/ensisa/connectfour/main-view.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
@@ -16,7 +18,7 @@
                <center>
                   <Label fx:id="resultLabel" style="-fx-font-weight: bold; -fx-background-color: LIGHTGRAY;" text="RED WINS" textFill="YELLOW" BorderPane.alignment="CENTER">
                      <font>
-                        <Font name="Arial Rounded MT Bold" size="37.0" />
+                        <Font name="Arial Rounded MT Bold" size="56.0" />
                      </font>
                      <opaqueInsets>
                         <Insets />
@@ -26,6 +28,22 @@
                      </padding>
                   </Label>
                </center>
+               <bottom>
+                  <SplitPane dividerPositions="0.5" prefHeight="160.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <items>
+                        <Button fx:id="newGameButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="New Game">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="endGameExitButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Exit">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Button>
+                     </items>
+                  </SplitPane>
+               </bottom>
             </BorderPane>
          </children>
       </StackPane>
